refactor: daily screens etc
